feat: added unknown messages guard (#87)
* feat: added unknown messages guard

* feat: added unknown messages guard

* feat: added unknown messages guard

* feat: added unknown messages guard

* feat: added unknown messages guard

* feat: added unknown messages guard
